--- a/PTI/SPCK/GUI/dangnhap2.ui
+++ b/PTI/SPCK/GUI/dangnhap2.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(216, 255, 205);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="bt_google">
     <property name="geometry">
@@ -130,7 +133,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>30</y>
+      <y>40</y>
       <width>91</width>
       <height>41</height>
      </rect>
@@ -209,7 +212,7 @@
      <string notr="true">color: rgb(255, 0, 4);</string>
     </property>
     <property name="text">
-     <string>Please fill in your login account information</string>
+     <string>Please fill in your login account information:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
@@ -239,6 +242,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
     <property name="placeholderText">
      <string>Please enter your email here!</string>
     </property>
@@ -251,6 +257,9 @@
       <width>521</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
