--- a/PTI/SPCK/GUI/forgotPassword.ui
+++ b/PTI/SPCK/GUI/forgotPassword.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>460</width>
-    <height>392</height>
+    <height>518</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>30</y>
+      <y>40</y>
       <width>181</width>
       <height>31</height>
      </rect>
@@ -36,7 +36,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>160</y>
+      <y>170</y>
       <width>201</width>
       <height>41</height>
      </rect>
@@ -54,7 +54,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>220</y>
+      <y>230</y>
       <width>201</width>
       <height>41</height>
      </rect>
@@ -72,7 +72,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>200</y>
+      <y>210</y>
       <width>341</width>
       <height>21</height>
      </rect>
@@ -85,7 +85,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>270</y>
+      <y>280</y>
       <width>341</width>
       <height>21</height>
      </rect>
@@ -97,8 +97,8 @@
    <widget class="QPushButton" name="bt_ok">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>330</y>
+      <x>180</x>
+      <y>450</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -116,7 +116,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>290</y>
+      <y>300</y>
       <width>251</width>
       <height>41</height>
      </rect>
@@ -134,7 +134,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>100</y>
+      <y>110</y>
       <width>201</width>
       <height>41</height>
      </rect>
@@ -152,13 +152,67 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>140</y>
+      <y>150</y>
       <width>341</width>
       <height>21</height>
      </rect>
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>340</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Your account type:</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="rb_admin">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>370</y>
+      <width>111</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Admin Account</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="rb_local">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>400</y>
+      <width>101</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Local Account</string>
     </property>
    </widget>
   </widget>
