--- a/PTI/SPCK/GUI/editNote.ui
+++ b/PTI/SPCK/GUI/editNote.ui
@@ -11,13 +11,13 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Note for WOW! - Edit Page</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(255, 243, 207);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="le_name">
     <property name="geometry">
      <rect>
       <x>220</x>
@@ -31,24 +31,6 @@
     </property>
     <property name="placeholderText">
      <string>You can enter the Notes Page name here!</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="bt_save">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>440</y>
-      <width>101</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Save changes</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -84,17 +66,38 @@
       <pointsize>15</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="plainText">
-     <string>I'm a student....</string>
+     <string/>
     </property>
     <property name="placeholderText">
      <string>Edit or start your Notes here!</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="bt_save">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>440</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Save changes</string>
+    </property>
+   </widget>
    <zorder>label</zorder>
-   <zorder>lineEdit</zorder>
-   <zorder>bt_save</zorder>
+   <zorder>le_name</zorder>
    <zorder>plainTextEdit</zorder>
+   <zorder>bt_save</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
