--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -245,7 +245,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Search Panel</string>
+     <string>Search Area</string>
     </property>
    </widget>
    <widget class="QListWidget" name="noteList">
@@ -265,16 +265,6 @@
     <property name="cursor" stdset="0">
      <cursorShape>ArrowCursor</cursorShape>
     </property>
-    <item>
-     <property name="text">
-      <string>Note Page 1</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Note Page 2</string>
-     </property>
-    </item>
    </widget>
    <widget class="QPushButton" name="bt_edit">
     <property name="geometry">
