--- a/PTI/SPCK/GUI/editNote.ui
+++ b/PTI/SPCK/GUI/editNote.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>751</width>
-    <height>525</height>
+    <height>549</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
    <widget class="QLineEdit" name="le_name">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>20</x>
       <y>30</y>
       <width>341</width>
       <height>21</height>
@@ -36,9 +36,9 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>340</x>
+      <x>160</x>
       <y>10</y>
-      <width>101</width>
+      <width>41</width>
       <height>21</height>
      </rect>
     </property>
@@ -48,7 +48,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Name this note:</string>
+     <string>Name:</string>
     </property>
    </widget>
    <widget class="QPlainTextEdit" name="te_note">
@@ -57,7 +57,7 @@
       <x>30</x>
       <y>80</y>
       <width>691</width>
-      <height>351</height>
+      <height>371</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -74,7 +74,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>440</y>
+      <y>460</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -88,10 +88,46 @@
      <string>Save changes</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>10</y>
+      <width>41</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Title:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="le_title">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>30</y>
+      <width>341</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="placeholderText">
+     <string>You can enter the Notes Page title here!</string>
+    </property>
+   </widget>
    <zorder>label</zorder>
    <zorder>le_name</zorder>
    <zorder>te_note</zorder>
    <zorder>bt_save</zorder>
+   <zorder>label_2</zorder>
+   <zorder>le_title</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
