--- a/PTI/SPCK/GUI/Setup.ui
+++ b/PTI/SPCK/GUI/Setup.ui
@@ -106,7 +106,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Installation mode</string>
+     <string>Installation Mode</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
