feat Update SPCK - Final 14/6/2024

--- a/PTI/SPCK/GUI/Setup2.ui
+++ b/PTI/SPCK/GUI/Setup2.ui
@@ -139,6 +139,11 @@
       <string>English</string>
      </property>
     </item>
+    <item>
+     <property name="text">
+      <string>Vietnamese</string>
+     </property>
+    </item>
    </widget>
    <widget class="QComboBox" name="cb_edition">
     <property name="geometry">
