--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1007</width>
-    <height>653</height>
+    <height>674</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,7 +40,7 @@
     <property name="geometry">
      <rect>
       <x>820</x>
-      <y>340</y>
+      <y>360</y>
       <width>20</width>
       <height>291</height>
      </rect>
@@ -53,7 +53,7 @@
     <property name="geometry">
      <rect>
       <x>860</x>
-      <y>500</y>
+      <y>520</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -71,7 +71,7 @@
     <property name="geometry">
      <rect>
       <x>860</x>
-      <y>570</y>
+      <y>590</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -89,7 +89,7 @@
     <property name="geometry">
      <rect>
       <x>830</x>
-      <y>330</y>
+      <y>350</y>
       <width>201</width>
       <height>20</height>
      </rect>
@@ -119,8 +119,8 @@
    <widget class="QPushButton" name="bt_add">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>180</y>
+      <x>790</x>
+      <y>200</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -169,7 +169,7 @@
     <property name="geometry">
      <rect>
       <x>860</x>
-      <y>430</y>
+      <y>450</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -189,7 +189,7 @@
       <x>550</x>
       <y>50</y>
       <width>401</width>
-      <height>121</height>
+      <height>131</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -201,9 +201,14 @@
      <rect>
       <x>570</x>
       <y>110</y>
-      <width>251</width>
+      <width>361</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);</string>
@@ -215,16 +220,23 @@
    <widget class="QPushButton" name="bt_search">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>110</y>
+      <x>710</x>
+      <y>150</y>
       <width>91</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>9</pointsize>
      </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 15px;
+color: rgb(42, 0, 255);</string>
     </property>
     <property name="text">
      <string>Search now!</string>
@@ -251,8 +263,8 @@
    <widget class="QListWidget" name="noteList">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>270</y>
+      <x>270</x>
+      <y>290</y>
       <width>461</width>
       <height>291</height>
      </rect>
@@ -269,8 +281,8 @@
    <widget class="QPushButton" name="bt_edit">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>580</y>
+      <x>330</x>
+      <y>600</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -287,8 +299,8 @@
    <widget class="QPushButton" name="bt_remove">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>180</y>
+      <x>580</x>
+      <y>200</y>
       <width>151</width>
       <height>51</height>
      </rect>
@@ -306,7 +318,7 @@
     <property name="geometry">
      <rect>
       <x>860</x>
-      <y>360</y>
+      <y>380</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -316,6 +328,9 @@
       <pointsize>10</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>Add Tasks</string>
     </property>
@@ -323,8 +338,8 @@
    <widget class="QPushButton" name="bt_detail">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>580</y>
+      <x>560</x>
+      <y>600</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -339,6 +354,25 @@
 note detail</string>
     </property>
    </widget>
+   <zorder>graphicsView</zorder>
+   <zorder>bt_search</zorder>
+   <zorder>label</zorder>
+   <zorder>line_2</zorder>
+   <zorder>bt_save</zorder>
+   <zorder>bt_exit</zorder>
+   <zorder>line</zorder>
+   <zorder>label_3</zorder>
+   <zorder>bt_add</zorder>
+   <zorder>label_5</zorder>
+   <zorder>line_3</zorder>
+   <zorder>bt_setting</zorder>
+   <zorder>le_name</zorder>
+   <zorder>label_4</zorder>
+   <zorder>noteList</zorder>
+   <zorder>bt_edit</zorder>
+   <zorder>bt_remove</zorder>
+   <zorder>bt_task</zorder>
+   <zorder>bt_detail</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
