--- a/PTI/SPCK/GUI/dangnhap.ui
+++ b/PTI/SPCK/GUI/dangnhap.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>804</width>
+    <width>801</width>
     <height>502</height>
    </rect>
   </property>
@@ -48,7 +48,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>220</y>
+      <y>200</y>
       <width>281</width>
       <height>51</height>
      </rect>
@@ -187,20 +187,26 @@ border-radius: 15px;</string>
    <widget class="QPushButton" name="bt_continue">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>20</y>
-      <width>91</width>
-      <height>41</height>
+      <x>150</x>
+      <y>270</y>
+      <width>161</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>9</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 15px;
+color: rgb(85, 0, 255);</string>
+    </property>
     <property name="text">
-     <string>Continue 
-without login</string>
+     <string>Continue without login</string>
     </property>
    </widget>
    <widget class="QPushButton" name="bt_forgot">
@@ -319,7 +325,7 @@ border-radius: 15px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>804</width>
+     <width>801</width>
      <height>21</height>
     </rect>
    </property>
