--- a/PTI/SPCK/GUI/setting.ui
+++ b/PTI/SPCK/GUI/setting.ui
@@ -73,6 +73,9 @@
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
+    <property name="frame">
+     <bool>true</bool>
+    </property>
     <item>
      <property name="text">
       <string>- - -</string>
@@ -135,6 +138,11 @@
     <item>
      <property name="text">
       <string>English</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Vietnamese</string>
      </property>
     </item>
    </widget>
