--- a/PTI/SPCK/GUI/editNote.ui
+++ b/PTI/SPCK/GUI/editNote.ui
@@ -60,6 +60,11 @@
       <height>371</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
      <string notr="true"/>
     </property>
