--- a/PTI/SPCK/GUI/admin.ui
+++ b/PTI/SPCK/GUI/admin.ui
@@ -48,7 +48,7 @@
      <string notr="true">color: rgb(255, 0, 4);</string>
     </property>
     <property name="text">
-     <string>EMAIL OR PHONE NUMBER</string>
+     <string>EMAIL</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
@@ -146,7 +146,7 @@
      <string/>
     </property>
     <property name="placeholderText">
-     <string>Enter your account/phone number here!</string>
+     <string>Enter your admin account here!</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
