--- a/PTI/SPCK/GUI/google.ui
+++ b/PTI/SPCK/GUI/google.ui
@@ -106,7 +106,7 @@
      <string notr="true">color: rgb(255, 0, 4);</string>
     </property>
     <property name="text">
-     <string>EMAIL OR PHONE NUMBER</string>
+     <string>EMAIL</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="le_email">
@@ -125,7 +125,7 @@
      <string/>
     </property>
     <property name="placeholderText">
-     <string>Enter your account/phone number here!</string>
+     <string>Enter your account here!</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
