--- a/PTI/SPCK/GUI/microsoft.ui
+++ b/PTI/SPCK/GUI/microsoft.ui
@@ -30,7 +30,7 @@
      <string/>
     </property>
     <property name="placeholderText">
-     <string>Enter your account/phone number here!</string>
+     <string>Enter your account here!</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="checkBox">
@@ -81,7 +81,7 @@
      <string notr="true">color: rgb(255, 0, 4);</string>
     </property>
     <property name="text">
-     <string>EMAIL OR PHONE NUMBER</string>
+     <string>EMAIL</string>
     </property>
    </widget>
    <widget class="QPushButton" name="bt_login">
